# nwaku-eval

./: .gitignore  README.md  flake.nix  pyproject.toml
experiments/: num_vs_bandwidth.py  test.py  waku_client.py
experiments/bandwidth/: README.md  common.py  helpers.py  num_of_messages.py  size.py
misc/: cmds.md
src/: mesh.py  utils.py
src/mesh/: mesh.py
src/nwaku/: client.py
src/nwaku/tests/: test_client.py
testdata/: logs.md  metrics_dump.txt
